feat: update related configurations. Add Babel, Jest, and Metro configurations.
Implement authentication and task management features with React Query. Create screens for login, registration, contacts, and tasks. Add components for loading, error handling, and invitations. Set up API services for user and task management.

--- a/app.json
+++ b/app.json
@@ -1,15 +1,16 @@
 {
   "expo": {
-    "name": "michaelEsenwa-mobile-app",
-    "slug": "michaelEsenwa-mobile-app",
+    "name": "teamapp",
+    "slug": "teamapp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "michaelesenwamobileapp",
+    "scheme": "teamapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.panera.teamapp"
     },
     "android": {
       "adaptiveIcon": {
