--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -50,9 +51,13 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.91.2",
+    "@testing-library/react-native": "^13.3.3",
+    "@types/jest": "29.5.14",
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "jest": "~29.7.0",
+    "jest-expo": "~54.0.14",
     "typescript": "~5.9.2"
   },
   "private": true
